--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Simple currency conversion",
   "main": "index.js",
   "scripts": {
+    "build": "cross-env NODE_ENV=production webpack -p",
+    "start": "webpack-dev-server --inline --content-base dist/ --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +21,29 @@
   "bugs": {
     "url": "https://github.com/j-/currency/issues"
   },
-  "homepage": "https://github.com/j-/currency#readme"
+  "homepage": "https://github.com/j-/currency#readme",
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-plugin-transform-object-rest-spread": "^6.19.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "cross-env": "^3.1.3",
+    "html-webpack-plugin": "^2.24.1",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "babel": {
+    "plugins": [
+      "transform-object-rest-spread"
+    ],
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  }
 }
