--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.16.0",
     "cross-env": "^3.1.3",
     "html-webpack-plugin": "^2.24.1",
+    "json-loader": "^0.5.4",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-redux": "^4.4.6",
