--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "cross-env": "^3.1.3",
+    "elemental": "^0.6.1",
     "html-webpack-plugin": "^2.24.1",
     "json-loader": "^0.5.4",
     "react": "^15.4.0",
+    "react-addons-css-transition-group": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
