--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack -p",
     "start": "webpack-dev-server --inline --content-base dist/ --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/j-/currency#readme",
   "devDependencies": {
+    "ava": "^0.17.0",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
     "elemental": "^0.6.1",
@@ -53,6 +55,11 @@
     "presets": [
       "es2015",
       "react"
+    ]
+  },
+  "ava": {
+    "require": [
+      "babel-register"
     ]
   }
 }
